compilateurDeca/src/test/deca/syntax/invalid/sans_objet/notclosed.deca

//Description
//
//Teste bloc non fermé
// Historique:
//    cree le 08/01/2026
{
    int x;
    x=1; 